# looking-glass

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: dataplane.rs  enroll.rs  lib.rs  main.rs  tunnel.rs
crates/agent/tests/: enroll.rs
crates/central/: Cargo.toml
crates/central/src/: admin_api.rs  auth.rs  enroll.rs  files.rs  installer.rs  lib.rs  main.rs  observability.rs  ratelimit.rs  run_api.rs  session.rs  store.rs  stream.rs  tunnel.rs
crates/central/tests/: admin.rs  auth.rs  enroll.rs  observability.rs  public.rs  run.rs  smoke.rs
crates/central/tests/common/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: exec.rs  lib.rs  liveness.rs  protocol.rs  template.rs  validate.rs
frontend/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  vitest.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  theme.svelte.ts  toast.svelte.ts
frontend/src/lib/admin/: CrudSection.svelte  EnrollDialog.svelte  LocationEditor.svelte  admin.location.test.ts  admin.locations.test.ts  admin.settings.test.ts  api.ts  enroll.test.ts  lastSeen.test.ts  lastSeen.ts  types.ts
frontend/src/lib/components/: theme-toggle.svelte
frontend/src/lib/components/ui/: dialog.svelte  tabs.smoke.test.ts  tabs.svelte  toaster.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
frontend/src/lib/components/ui/input/: input.svelte
frontend/src/lib/components/ui/label/: label.svelte
frontend/src/lib/console/: Console.svelte  MtrTable.svelte  console.test.ts  mtr.ts  run.svelte.ts
frontend/src/lib/public/: CopyButton.svelte  NetworkBlock.svelte  SpeedtestBlock.svelte  api.test.ts  api.ts  downloadUrl.ts  latency.ts  methods.test.ts  methods.ts  network.test.ts  settings.ts  speedtest.test.ts
frontend/src/routes/: +layout.svelte  +page.svelte  run.test.ts
frontend/src/routes/admin/: +layout.svelte  +page.svelte
frontend/src/routes/admin/settings/: +page.svelte
frontend/src/routes/install/: +page.svelte  install.form.test.ts
frontend/src/routes/login/: +page.svelte  login.form.test.ts
frontend/tests/: fixture-server.mjs  harness.smoke.spec.ts  install.e2e.spec.ts  run.e2e.spec.ts  vite-e2e.config.ts
frontend/tests/fixture/: index.html
scripts/: check-readme.sh  check-release-workflow.sh  install-agent.sh  test-install-agent.sh
