[package]
name = "agent"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true, features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "logging"] }
tokio-tungstenite = "0.29.0"
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower-http = { workspace = true, features = ["fs"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
