[package]
name = "central"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true, features = ["time"] }
tokio-stream = "0.1"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
redb = "4.1.0"
argon2 = "0.5.3"
tower-sessions = { version = "0.15.0", features = ["signed"] }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
garde = { version = "0.23.0", features = ["derive"] }
async-trait = "0.1.89"
time = { version = "0.3.53", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "logging"] }
tokio-tungstenite = "0.29.0"
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }

[dev-dependencies]
shared = { path = "../shared" }
serde_json = "1.0.150"
time = "0.3.53"
tower = { workspace = true, features = ["util"] }
tower-sessions = "0.15.0"
tracing.workspace = true
tracing-subscriber.workspace = true
