[package]
name = "shared"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
hickory-resolver = "0.26.1"
tokio = { workspace = true, features = ["process", "time", "io-util", "sync"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
serde_json = "1.0.150"

[dev-dependencies]
tokio = { workspace = true, features = ["process", "time", "io-util", "sync"] }
